[package]
name = "uno-flash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
tokio = { version = "1.3.0", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3.1"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64" 
futures = "0.3.15"
uuid = { version = "0.8.2",  features = ["serde", "v4"] }
pretty_env_logger = "0.4.0"

[[bin]]
name = "uno-flash"
path = "src/main.rs"